--- a/index.html
+++ b/index.html
@@ -3,20 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio - Ednilson Belo</title>
+    <title>Ednilson Belo - Portfólio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #ffffff;
+            text-align: center;
+        }
+        header {
+            background: #1e1e1e;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: 600;
+        }
+        section {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+            background: #1a1a1a;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+            text-align: left;
+        }
+        h2 {
+            color: #f4a261;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            padding: 5px 0;
+        }
+        a {
+            color: #f4a261;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Ednilson Belo</h1>
-    <h2>Desenvolvedor de Software | Criatividade & Inovação</h2>
-    <p>Sou um desenvolvedor apaixonado por tecnologia, especializado em backend e frontend.</p>
-    <h3>Projetos</h3>
+
+<header>Ednilson Belo - Desenvolvedor de Software</header>
+
+<section>
+    <h2>Sobre Mim</h2>
+    <p>Sou um desenvolvedor de software apaixonado por tecnologia, sempre buscando soluções inovadoras e eficientes.</p>
+</section>
+
+<section>
+    <h2>Habilidades Técnicas</h2>
     <ul>
-        <li>Site do Tribunal Constitucional de Angola</li>
-        <li>Sistema de Gestão de RH - Correios de Angola</li>
-        <li>API para Integração com Serviços</li>
+        <li><strong>Linguagens:</strong> C#, .NET Core, JavaScript, TypeScript</li>
+        <li><strong>Frameworks:</strong> ASP.NET Core, Entity Framework, React, Spring Framework</li>
+        <li><strong>Banco de Dados:</strong> SQL Server, MySQL, PostgreSQL</li>
+        <li><strong>Ferramentas:</strong> Git, Docker, CI/CD, DigitalOcean</li>
     </ul>
-    <h3>Contato</h3>
-    <p>Email: ednilson.belo@example.com</p>
-    <p><a href="https://github.com/EdnilsonBeloNonSleep">GitHub</a> | <a href="https://linkedin.com/in/ednilsonbelo">LinkedIn</a></p>
+</section>
+
+<section>
+    <h2>Projetos</h2>
+    <ul>
+        <li>📌 <strong>Tribunal Constitucional de Angola:</strong> Portal institucional para acesso a informações jurídicas.</li>
+        <li>📌 <strong>Sistema RH - Correios de Angola:</strong> Gestão de funcionários e folha de pagamento.</li>
+        <li>📌 <strong>API REST:</strong> Desenvolvimento de APIs com autenticação JWT.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Contato</h2>
+    <p>📧 <a href="mailto:ednilson.belo@example.com">ednilson.belo@example.com</a></p>
+    <p>🔗 <a href="https://github.com/EdnilsonBeloNonSleep" target="_blank">GitHub</a></p>
+    <p>💼 <a href="https://linkedin.com/in/ednilsonbelo" target="_blank">LinkedIn</a></p>
+</section>
+
 </body>
 </html>
