Meu portfólio online - Alteração no HTML, add styles, add contact section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +63,7 @@
         <li><strong>Linguagens:</strong> C#, .NET Core, JavaScript, TypeScript</li>
         <li><strong>Frameworks:</strong> ASP.NET Core, Entity Framework, React, Spring Framework</li>
         <li><strong>Banco de Dados:</strong> SQL Server, MySQL, PostgreSQL</li>
-        <li><strong>Ferramentas:</strong> Git, Docker, CI/CD, DigitalOcean</li>
+        <li><strong>Ferramentas:</strong> Git, DigitalOcean, Visual Studio, VS Code, PostMan Insomnia</li>
     </ul>
 </section>
 
@@ -78,9 +78,11 @@
 
 <section>
     <h2>Contato</h2>
-    <p>📧 <a href="mailto:ednilson.belo@example.com">ednilson.belo@example.com</a></p>
+    <p>📧 <a href="mailto:eddybelo10@gmail.com">eddybelo10@gmail.com</a></p>
+    <p>📞 <a href="tel:+244932956764">+244 932 956 764</a></p>
     <p>🔗 <a href="https://github.com/EdnilsonBeloNonSleep" target="_blank">GitHub</a></p>
-    <p>💼 <a href="https://linkedin.com/in/ednilsonbelo" target="_blank">LinkedIn</a></p>
+    <p>💼 <a href="https://www.linkedin.com/in/ednilson-belo-4321431a5/" target="_blank">LinkedIn</a></p>
+    <p>📄 <a href="Ednilson Belo CV(en) - 2025.pdf" target="_blank">Download do Currículo(en)</a></p>
 </section>
 
 </body>
